--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
     />
     <title>Newsletter Signup</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="background-color: hsl(235, 18%, 26%);">
     <div id="root"></div>
   </body>
 </html>
